2005-01-31  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/tcl.m4, unix/configure: add solaris-64 gcc build
	support. [Bug 1021871]

2005-01-31  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>

	* generic/tkImgPhoto.c (PhotoFormatThreadExitProc): Made the
	comments in the code more relevant to the function they were
	documenting! [Bug 1110553]

	* library/msgs/es_ES.msg: Added more localization for Spanish
	Spanish. [Bug 1111213]

2005-01-25  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXInit.c (TkpInit): set tcl_interactive to 1 to show
	console at startup instead of directly calling [console show].
	
	* unix/tcl.m4 (Darwin): fixed bug with static build linking to
	dynamic library in /usr/lib etc instead of linking to static library
	earlier in search path. [Tcl Bug 956908]
	Removed obsolete references to Rhapsody. 
	* unix/configure: autoconf-2.57

2005-01-18  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* library/demos/menu.tcl: Reworked to make dialogs children of the
	demo widget so that they are properly visible. Issue reported by
	Keith Nash <k.j.nash@usa.net>

2005-01-13  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* library/tkfbox.tcl (IconList_Selection, IconList_Create):
	(IconList_Arrange): Assorted tk_getOpenFile fixes. [part of Bug 600313]
	(IconList_ShiftMotion1): Also fix shift-drag.

2005-01-12  Don Porter  <dgp@users.sourceforge.net>

	* unix/tcl.m4:		Sync'ed to Tcl's copy.
	* unix/configure:	autoconf-2.57

2005-01-12  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* doc/event.n: Added section on predefined virtual events. [Bug 608115]

2005-01-11  Vince Darley  <vincentdarley@users.sourceforge.net>

	* generic/tkTextDisp.c: fix to scrollbar height calculations
	of text widgets containing a single very long (wrapped) line.
	This fixes at least part of [Bug 1093631].

2005-01-11  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tkObj.c (TkParsePadAmount):